Choices: Improve closing logic - Brings back the close by distance *Only will close if the mouse has been in the menu first* - The form.choice*s*() now prevent event propogation *Fixes the widget triggering a group's collapse state when in a header.* - Use a grid for icon/text/icon layout *Text is truncated and doesn't push right icon out of container now* - Popup will now stay on screen better *Determining whether it should anchor on top/bottom and left/right*

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -1,4 +1,4 @@
-#root {
+:root {
     --roundness: 5px;
     --input-height: 28px;
 }
